--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-language: eagle
+language: python
+python:
+- '3.3'
 install:
 - wget https://github.com/I2SE/eagle-bom.py/releases/download/v0.2.0/eagle-bom.py
 script:
